[package]
name = "hedu"
version = "0.1.1"
edition = "2021"
publish = true
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "Hex dumping tool written in Rust"
readme = "README.md"
homepage = "https://git.cscherr.de/PlexSheep/hedu"
repository = "https://git.cscherr.de/PlexSheep/hedu"
keywords = ["hexdumper"]

[dependencies]
libpt = { version = "0.3.11", features = ["log", "bintols"] }
clap = { version = "4.4.4", features = ["derive", "help"] }
clap-num = { version = "1.0.2" }
clap-verbosity-flag = { version = "2.0.1" }
