[package]
name = "hedu"
version = "0.2.0"
edition = "2021"
publish = true
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "Hex dumping tool written in Rust"
readme = "README.md"
homepage = "https://git.cscherr.de/PlexSheep/hedu"
repository = "https://git.cscherr.de/PlexSheep/hedu"
keywords = ["hexdumper"]

[dependencies]
libpt = { version = "0.5.1", features = ["bintols", "log"], default-features = false }
clap = { version = "4.4.4", features = ["derive", "help"] }
anyhow = "1.0.79"
